@@ -2,7 +2,7 @@ Package: Rmpfr
 Type: Package
 Title: R MPFR - Multiple Precision Floating-Point Reliable
 Version: 0.4-3
-Date: 2011-08-..
+Date: 2011-08-23
 Author: Martin Maechler
 Maintainer: Martin Maechler <maechler@stat.math.ethz.ch>
 Depends: methods, R (>= 2.11.0)
