@@ -48,3 +48,8 @@
 
 
 17a) as(1, "mpfr") & TRUE : no longer gives infinite recursion error
+
+20) integrateR( ... rel.tol, verbose= TRUE) :
+    the precision of the output should be increased a bit,
+    (still depending  on rel.tol !)
+
