@@ -125,6 +125,7 @@ export(
        , "tcrossprod"
        , "toNum"
        , "unique"
+       , "unirootR"
        , "y0", "y1", "yn"
        , "zeta"
        )
