@@ -4,6 +4,29 @@ URGENT or "DO first" :
      design a "test all Ops" with all combinations of "mpfr", "numeric","logical"
      (and possibly more).
 
+21) What's the exponent range -- can we change it? - --> Need R interface to
+
+   — Function: int mpfr_set_emin (mpfr_exp_t exp)
+   — Function: int mpfr_set_emax (mpfr_exp_t exp)
+
+       Set the smallest and largest exponents allowed for a floating-point variable. Return a non-zero value when exp is not in the range accepted by the implementation (in that case the smallest or largest exponent is not changed), and zero otherwise. If the user changes the exponent range, it is her/his responsibility to check that all current floating-point variables are in the new allowed range (for example using mpfr_check_range), otherwise the subsequent behavior will be undefined, in the sense of the ISO C standard.
+
+   — Function: mpfr_exp_t mpfr_get_emin_min (void)
+   — Function: mpfr_exp_t mpfr_get_emin_max (void)
+   — Function: mpfr_exp_t mpfr_get_emax_min (void)
+   — Function: mpfr_exp_t mpfr_get_emax_max (void)
+
+       Return the minimum and maximum of the exponents allowed for mpfr_set_emin and mpfr_set_emax respectively. These values are implementation dependent, thus a program using mpfr_set_emax(mpfr_get_emax_max()) or mpfr_set_emin(mpfr_get_emin_min()) may not be portable.
+
+ ---> model this analogous to   SEXP R_mpfr_get_default_prec(void)
+      in src/utils.c
+      	 ~~~~~~~~~~~
+
+
+
+
+
+
 ---------------------------- compare to ./Done ------------------------
 
 2)
@@ -71,6 +94,15 @@ URGENT or "DO first" :
     --> experiments in ~/R/MM/Pkg-ex/Rmpfr/psigamma.R )
     Note that since, MPFR 3.0.0, there is a digamma(); .. which we now interface to
 
+18) ifelse()  fails ... maybe I should mask it
+             {or "fix it" via assign*() in base ?? -- they will love that!}
+19) outer() fails too, (similarly I think)
+
+21)
+22)
+23)
+24)
+25)
 
 50) For *complex* arithmetic, build interface to the  "MPC" library
    ---> http://www.multiprecision.org/mpc -- which is LGPL and itself
