@@ -1,3 +1,9 @@
+2011-08-23  Martin Maechler  <maechler@stat.math.ethz.ch>
+
+	* R/unirootR.R (unirootR): R-only version of uniroot(), carefully ensuring
+	* man/unirootR.Rd: that as.numeric(.) is used only in some cases;
+	thanks to John Nash's very recent R code in his 'rootoned' package.
+
 2011-08-11  Martin Maechler  <maechler@stat.math.ethz.ch>
 
 	* R/Arith.R: add "Logic" methods (mpfr, numeric), avoiding
